--- a/index.html
+++ b/index.html
@@ -32,16 +32,8 @@
 <body>
     <div class="container">
         <div class="box">
-            <h1>Box 1</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-        </div>
-        <div class="box">
-            <h1>Box 2</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-        </div>
-        <div class="box">
-            <h1>Box 3</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+            <h1>Cypress</h1>
+            <p>Cypress is a community-driven platform for reporting and tracking public issues on a Toronto map. Users can create alerts for problems like potholes or broken streetlights, while city workers can update and resolve them in real time.</p>
         </div>
     </div>
 
