--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 
 
-<body>
+<body class="container bg-light">
     <div class="container">
-        <div class="box">
-            <h1>Box 1</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+        <div class="box text-center">
+            <h1 class="h1">Box 1</h1>
+            <p class="h5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
         </div>
         <div class="box">
             <h1>Box 2</h1>
