--- a/index.html
+++ b/index.html
@@ -29,25 +29,14 @@
 
 
 
-<body class="container bg-light">
+<body class="container bg-secondary">
     <div class="container">
-<<<<<<< HEAD
+
+
         <div class="box text-center">
-            <h1 class="h1">Box 1</h1>
-            <p class="h5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-        </div>
-        <div class="box">
-            <h1>Box 2</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-        </div>
-        <div class="box">
-            <h1>Box 3</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
-=======
-        <div class="box">
-            <h1>Cypress</h1>
-            <p>Cypress is a community-driven platform for reporting and tracking public issues on a Toronto map. Users can create alerts for problems like potholes or broken streetlights, while city workers can update and resolve them in real time.</p>
->>>>>>> 2dc445945f88e7c350b4b8fa4002a576235bc8aa
+            <h1 class="h1 text-light">Cypress</h1>
+            <p class="h5 text-light">Cypress is a community-driven platform for reporting and tracking public issues on a Toronto map. Users can create alerts for problems like potholes or broken streetlights, while city workers can update and resolve them in real time.</p>
+
         </div>
     </div>
 
