--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         maxZoom: 19,
         attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
+
+    var marker = L.marker([43.66127272915081, -79.38768514171629]).addTo(map);
+    var marker = L.marker([43.64272915081, -79.3768514171629]).addTo(map);
     
     </script>
 </body>
